# acidflow

./: CMakeLists.txt  MANUAL.md  README.md
book/: 01-preface.md  02-history.md  03-music-theory.md  04-rhythm.md  05-synthesis.md  06-303-character.md  07-getting-started.md  08-interface.md  09-oscillator.md  10-filter.md  11-envelope.md  12-accent.md  13-slides.md  14-drive-vol.md  15-grid.md  16-melody.md  17-rests.md  18-accent-slide-rhythm.md  19-prob-ratchet.md  20-p-locks.md  21-swing-length.md  22-drums-overview.md  23-kick.md  24-snare-hats-clap.md  25-drum-programming.md  26-drum-bus.md  27-drive-fx.md  28-delay.md  29-reverb.md  30-song-mode.md  31-jam-mode.md  32-midi.md  33-randomizer.md  34-arrangement.md  35-subgenres.md  36-canon.md  37-producing.md  38-mixing.md  39-presets.md  40-keys.md  (+3 more)
src/: audio.hpp  audio_alsa.cpp  audio_coreaudio.cpp  audio_wasapi.cpp  engine.cpp  engine.hpp  main.cpp  midi_alsa.cpp  midi_stub.cpp  widgets.hpp
src/tb303/: drums.hpp  filter_response.hpp  help_bar.hpp  help_overlay.hpp  knob.hpp  scope.hpp  section.hpp  sequencer.hpp  step_data.hpp  take_picker.hpp  theme.hpp  transport.hpp  waveform_toggle.hpp
